# git_client

./: .gitignore  README.md  pyproject.toml
doc/: backlog.md  design.md  performance.md
src/gitclient/: __main__.py
src/gitclient/application/: commit_loader.py  diff_loader.py  fetch_worker.py  refs_loader.py  remote_workers.py  status_loader.py  write_queue.py
src/gitclient/domain/: errors.py  graph.py  instrumentation.py  models.py  patch.py
src/gitclient/infrastructure/: askpass.py  local_engine.py  remote_engine.py  stats_store.py
src/gitclient/ui/: clone_dialog.py  conflict_panel.py  credential_dialog.py  delegates.py  main_window.py  theme.py  working_tree_panel.py
src/gitclient/viewmodel/: diff_model.py  (+1 more)
tests/: conftest.py
tests/benchmarks/: bench_load.py  fixtures.py  test_fixtures.py
tests/integration/: auth_harness.py  remote_harness.py  test_auth.py  test_auth_hardening.py  test_clone.py  test_clone_safety.py  test_clone_ui.py  test_commit_loader.py  test_conflict_resolution.py  test_design_consistency.py  test_engine_writes.py  test_fetch_ui.py  test_history_ops.py  test_history_ops_ui.py  test_hunk_staging.py  test_live_progress.py  test_local_engine.py  test_main_window.py  test_merge.py  test_merge_hardening.py  test_merge_local.py  test_merge_ui.py  test_partial_staging_ui.py  test_prefetch.py  test_remote_engine.py  test_stall_timeout.py  test_stats_store.py  test_working_tree_ui.py
tests/unit/: test_commit_graph_model.py  test_diff_model.py  test_graph.py  test_instrumentation.py  test_patch.py  test_theme.py  test_write_queue.py
