[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gitclient"
version = "0.1.0"
description = "트래픽 제약 환경을 위한 데스크톱 Git 클라이언트"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "pygit2>=1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
]

[project.scripts]
gitclient = "gitclient.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
